kubernetes/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: prometheus-k8s
      port:
        number: 9090
  ingressClassName: tailscale
  tls:
    - hosts:
        - prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: alertmanager-main
      port:
        number: 9093
  ingressClassName: tailscale
  tls:
    - hosts:
        - alertmanager
