kubernetes/prometheus/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
  selector:
    prometheus: prometheus
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-route
  namespace: monitoring
  labels:
    jordande.beer/auth: "true"
spec:
  hosts:
    - prometheus.jordande.beer
  gateways:
    - istio-system/gateway
  http:
    - match:
        - authority:
            prefix: prometheus.jordande.beer
          gateways:
            - istio-system/gateway
      route:
        - destination:
            host: prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
